--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ section {
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .top-container {
     background-color: var(--container-one);
     width: 450px;
-    height: 200px;
+    height: 250px;
     color: var(--color-one);
 }
 
@@ -56,4 +56,18 @@ h2 {
     padding: 10px;
     position: relative;
     bottom: 20px;
+}
+
+button {
+    border: none;
+    background-color: var(--color-one);
+    color: var(--color-two);
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.2s;
+}
+
+button:hover {
+    background-color: #CCC1FF;
 }
