--- a/styles.css
+++ b/styles.css
@@ -48,17 +48,19 @@ h1 {
     padding-top: 10px;
 }
 
-h2 {
+input {
+    width: 70px;
     font-size: 45px;
     border: 1px solid #CCC1FF;
     border-radius: 5px;
-    width: 70px;
+    display: block;
+    background-color: var(--container-one);
+    color: var(--color-one);
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     padding: 10px;
-    position: relative;
-    bottom: 20px;
+    padding-left: 20px;
 }
 
 button {
